# clipster

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
clipster-agent/: Cargo.toml
clipster-agent/src/: launchd.rs  main.rs  sync.rs  watcher.rs
clipster-app/: Cargo.toml  tauri.conf.json
clipster-app/capabilities/: default.json  entitlements.plist
clipster-app/src/: main.rs  sync.rs
clipster-cli/: Cargo.toml
clipster-cli/src/: client.rs  main.rs
clipster-common/: Cargo.toml
clipster-common/src/: config.rs  error.rs  models.rs
clipster-server/: Cargo.toml
clipster-server/src/: db.rs  lib.rs  main.rs  routes.rs  setup.rs  state.rs  tls.rs
clipster-server/tests/: api_integration.rs
deploy/: clipster-server.conf  clipster-server.service  install.sh
web/: app.js  index.html  package-lock.json  package.json  style.css  tsconfig.json
web/src/: api.ts  app.ts  time.ts  toast.ts  types.ts
web/tests/: api.test.ts  integration.test.ts  time.test.ts
