[package]
name = "clipster-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clipster-common = { path = "../clipster-common" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
arboard = { version = "3", features = ["image-data"] }
rand = "0.9"
base62 = "2"
anyhow = "1"
png = "0.17"
urlencoding = "2"
